--- a/AngularApp/src/styles.scss
+++ b/AngularApp/src/styles.scss
@@ -93,6 +93,7 @@
 
             &Map{
                 background: var(--radial-bg-skyblue);
+                margin:30px 0 0 0 ;
                 height:600px;
                 flex : 0 0 80%;
             }
